# adamantium

./: flake.nix  rust-toolchain.toml
client/: .gitignore  export_presets.cfg  game.tscn  icon.svg.import  project.godot
client/assets/placeholder/: tileset.png.import
client/models/: human.glb  human.glb.import
client/scenes/: main.tscn  player.tres  player.tscn
client/scenes/ui/: chat_ui.tscn  name_screen.tscn  ui.tscn
client/scripts/: camera.gd  camera_controller.gd  camera_controller.gd.uid  chat_ui.gd  chat_ui.gd.uid  constants.gd  constants.gd.uid  entity.gd  entity.gd.uid  globals.gd  globals.gd.uid  player.gd  player.gd.uid  server.gd  server.gd.uid  world_renderer.gd  world_renderer.gd.uid
client/scripts/components/: anim_state_component.gd  anim_state_component.gd.uid  animation_controller_component.gd  animation_controller_component.gd.uid  direction_component.gd  direction_component.gd.uid  (+10 more)
server/: Cargo.toml
server/src/: command.rs  event.rs  log.rs  main.rs  objects.rs  peer_input.rs  state.rs  types.rs
server/src/common/: events.rs
server/src/ecs/: mod.rs
server/src/ecs/components/: delta.rs  id.rs  mod.rs  player_name.rs  sprite.rs  transform.rs
server/src/ecs/resources/: counters.rs  delta.rs  mod.rs  networking.rs  world_manager.rs
server/src/ecs/systems/: chunk_load_system.rs  delta_time_system.rs  direction_system.rs  input_system.rs  mod.rs  movement_system.rs  track_system.rs
server/src/ecs/utils/templates/: player.rs
server/src/networking/: mod.rs
server/src/world/: chunk.rs  generator.rs  mod.rs  persistence.rs  tile.rs
(+187 files in other folders)
